--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 												<input type="text" name="name" placeholder="Name" />
 											</div>
 											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
+												<input type="text" name="email" placeholder="emanuelefro@gmail.com" />
 											</div>
 											<div class="col-12">
 												<input type="text" name="subject" placeholder="Subject" />
